--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: focal
 language: python
 
 python:
-  - 3.11
+  - 3.8
 
 install:
   - sudo apt -y install python3-distutils
@@ -23,28 +23,24 @@ install:
   - sudo apt install -y git zip unzip openjdk-8-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
   - pip3 install --upgrade Cython==0.29.19 virtualenv
   - export PATH=$PATH:~/.local/bin/
-  - ls -l
+  - ls -la
   - echo "TODO COMPILE 32bit"
+  - yes | cp -f buildozer-32bit.spec buildozer.spec
   - yes | buildozer android debug
   - ls -la
   - ls bin/ -l
+  - echo "TODO"
   - gem install dpl --pre
-  - dpl releases --token $GITHUB_TOKEN --file "bin/mobileapp001-0.3-armeabi-v7a-debug.apk" --tag_name "v.0.3"
+  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.2-armeabi-v7a-debug.apk" --tag_name "v.0.2"
   - echo "TODO COMPILE 64bit"
-  - ls -l /home/travis/
-  - ls -l /home/travis/build/WISEPLAT/mobile_app_001/
   - ls -la
   - rm -r -f .buildozer
   - ls -la
-  - rm -r -f /home/travis/build/WISEPLAT/mobile_app_001/.buildozer
-  - ls -l /home/travis/
-  - ls -l /home/travis/build/WISEPLAT/mobile_app_001/
-  - ls -l
   - yes | cp -f buildozer-64bit.spec buildozer.spec
   - yes | buildozer android debug
   - ls -la
   - ls bin/ -l
   - echo "TODO"
   - gem install dpl --pre
-  - dpl releases --token $GITHUB_TOKEN --file "bin/service-0.1-arm64-v8a-debug.apk" --tag_name "v.0.3"
+  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.2-arm64-v8a-debug.apk" --tag_name "v.0.2"
   - echo "OK"
